# Remote-Music-Player

./: .gitignore  README.md
server/: .gitignore  Cargo.toml  Music.toml  README.md  Rocket.toml  music  rustfmt.toml
server/src/: main.rs
server/src/api/: get.rs  mod.rs  post.rs  volume.rs
server/src/controllers/: get.rs  misc.rs  mod.rs  post.rs  queue.rs  volume.rs
server/src/music/: config.rs  file.rs  mod.rs  mp3.rs  play.rs  yt.rs
server/src/requests/: mod.rs  song.rs  volume.rs
server/src/responses/: mod.rs  song.rs  volume.rs  vote.rs
web-client/: .eslintrc.json  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tslint.json
web-client/src/: index.html  proxy.conf.json  styles.css
web-client/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
web-client/src/app/current/: current.component.ts
web-client/src/app/interfaces/: song.service.ts  song.ts
web-client/src/app/interfaces/get/: song.service.ts
web-client/src/app/interfaces/post/: request.service.ts  request.ts  skip.service.ts  skip.ts
web-client/src/app/interfaces/volume/: volume.service.ts  volume.ts
web-client/src/app/request-song/: request-song.component.css  request-song.component.html  request-song.component.spec.ts  request-song.component.ts
web-client/src/app/song-list/: song-list.component.css  song-list.component.html  song-list.component.ts
web-client/src/app/song_list/: song_list.component.html  song_list.component.ts
web-client/src/app/volume/: volume.component.css  volume.component.html  volume.component.ts
